...
            android:text="Save email"
            android:layout_marginBottom="16dp"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <!-- Logout -->
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:backgroundTint="@android:color/holo_red_dark"/>
    </LinearLayout>
</ScrollView>
...
